docker/kubernetes/kube_basic/deployment-helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: echo
    labels:
        app: echo
spec:
    replicas: 4
    selector:
        matchLabels:
            app: echo
    template: # template 아래는 파드의 리소스 정의와 같음
        metadata:
            labels:
                app: echo
        spec:
            containers:
            - name: nginx
              image: gihyodocker/nginx:patched
              ports:
              - containerPort: 80
            - name: echo
              image: gihyodocker/echo:latest
              ports:
              - containerPort: 8080
