docker/kubernetes/kube_basic/externalname_helloworld.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-sample
spec:
    type: ExternalName
    externalName: external-sample.jp
